all citaitons added to chapter 3

--- a/chap3.tex
+++ b/chap3.tex
@@ -807,23 +807,23 @@ as
 his intent to generate ``a new interest in the sensorimotor aspects of
 human performance''---in other words, the way that human capabilities
 interact with the tools they use to accomplish the tasks they are
-set\cite[p. 7]{sheridan}. Later human factors or \emph{ergonomics}
+set \cite[p. 7]{sheridan}. Later human factors or \emph{ergonomics}
 work continued to probe such questions, though many supervisory
 control systems had already entered relatively common use, including
 aircraft autopilots, automatic elevators, and even, perhaps arguably,
-washers and dryers.\cite[p. 8]{sheridan}. Though control researchers
+washers and dryers \cite[p. 8]{sheridan}. Though control researchers
 interested in the behaviors of humans in interactions with highly
 automated systems were already pursuing similar work, supervisory
 control, according to Sheridan, truly came into its own as part of
 research on the teleoperation\footnote{Teleoperation means the
   extension of an operator's sensing and control capacity to a remote
-  location, via an artificial assemblage.\cite[p. 4]{sheridan}} of vehicles under time delay,
+  location, via an artificial assemblage \cite[p. 4]{sheridan}.} of vehicles under time delay,
 specifically on the moon. The time delay enforced a fundamental
 constraint on direct operation, as the results of any action require
 three seconds to be reported back to Earth, and therefore made
 apparent the great benefit of having the remotely-operated system
 include its own internal control loop to allow it to perform simple
-delegated tasks.\cite[p. 9]{sheridan}
+delegated tasks \cite[p. 9]{sheridan}.
 
 As Sheridan describes, the concept of
 supervisory control comes from
@@ -848,17 +848,18 @@ close a control loop of its own, simply requiring it to interconnect
 ``through artificial effectors and sensors to the controlled process
 or task environment'':  only in the strict case can the computer
 operate without the human as an autonomous system ``for some
-variables at least some of the time.''\cite[p. 1]{sheridan} This
+variables at least some of the time'' \cite[p. 1]{sheridan}. This
 emphasis on partial, gradiated control\footnote{The computer system
   may function primarily on the ``efferent or motor side'' to actually
 implement directives from the supervisor, subject to its own
-sensors.\cite[p. 3]{sheridan} Or it may act principally ``on the
+sensors \cite[p. 3]{sheridan}. Or it may act principally ``on the
 display side,'' processing incoming sensory information into a form
 digestible for the supervisor, or, as is usual, it may do some
-both.\cite[p. 3]{sheridan} As Sheridan notes, the computer acts
+both \cite[p. 3]{sheridan}. As Sheridan notes, the computer acts
 independently ``at least for short periods of time,'' and the human
 may assume direct control of the entire system or certain variables
-within the system at various points.\cite[p. 3]{sheridan}} is emblematic of the entire HSC
+within the system at various points \cite[p. 3]{sheridan}.} is
+emblematic of the entire HSC 
 project, and represents its fundamental ideological difference from
 the AI-focused perspective on automated systems.\footnote{Why is this
   AI-focused view so prominent? I would argue it is because it
@@ -901,7 +902,7 @@ system is something HF and HSC continue to struggle with, as it is a
 tricky problem to get right. Human operators respond differently under
 laboratory test conditions than they do under the stress of actual
 operations, a fact that troubled X-15 designers attempting to tune
-their fly-by-wire controls.\cite[p. ???]{???-digitalApollo} Though
+their fly-by-wire controls \cite[p. 54]{DM}. Though
 improvements have been made in this area, as modeling operator
 responses is a topic of great interest especially in aeronautical and
 astronautical design, human operators continue to be
@@ -992,7 +993,7 @@ the outcomes of tasks are not determined by individual components of a
 system but by the overall dynamics of the system, and the behaviors of
 a complex thinking system cannot be ``inferred from the properties of
 individual agents, alone,'' irrespective of the detail to which those
-individuals may be studied or modeled.\cite[p. 265]{hutchinsCockpit}
+individuals may be studied or modeled \cite[p. 265]{hutchinsCockpit}.
 Hutchins's ``How a Cockpit Remembers Its Speeds'' lays out a framework
 for understanding the cognitive activities of a human-machine system,
 and uses the example of an airline cockpit to show how the cognitive
@@ -1007,7 +1008,8 @@ safe operations---are rudimentary in terms of other forms of
 cockpit automation, but the issues they present do not disappear with
 increased automation. Hutchins and Klausen co-wrote another
 article in 1995 titled ``Distributed Cognition in an Airline
-Cockpit,''\cite{???-hutchinsKlausen} which focuses on the interactions of the Captain, first
+Cockpit,'' \cite{hutchinsKlausen} which focuses on the
+interactions of the Captain, first 
 officer, second officer, and air-traffic control. This exchange,
 though it involves control yokes, altitude alerts, and other
 technological actants, is primarily focused on the joint capabilities
@@ -1031,8 +1033,8 @@ bugs \cite[p. 282]{hutchinsCockpit}. The whole system can be said to
 have a ``memory'' that is distinct from the pilot's memory: the
 ``\emph{cockpit system} remembers speeds'' by virtue of the pilots
 within that system judging a needle on the airspeed indicator against
-the position of the bug.\cite[p.
-  283]{hutchinsCockpit} I introduce this material here because
+the position of the bug \cite[p.
+  283]{hutchinsCockpit}. I introduce this material here because
 Hutchins, by looking at cognitive behaviors within this particular
 setting, identifies a new unit of analysis: the cockpit as a whole.
 Automation systems are more complex than the cockpit's
@@ -1052,7 +1054,7 @@ operator within an automated vehicle. But this perspective is not
 represented in the prevailing guides for automated system development.
 While Hutchins's cockpit remembers its speeds through a combination of
 human activity and physical cognitive aids, the NHTSA's ``vehicle''
-may sometimes ``not perform a control function''\cite[p. 3]{NHTSA} and
+may sometimes ``not perform a control function'' \cite[p. 3]{NHTSA} and
 nevertheless remain on the road. The NHTSA's documentation instead
 focuses simplistically on whether the human or the ``vehicle''
 controls, rather than addressing what control involves or how it may
@@ -1062,10 +1064,11 @@ A more nuanced view of the cognitive tasks involved in interacting
 with automated systems also goes quite far toward clarifying some
 of the more difficult parts of system automation. Specifically,
 significant research interest in human factors engineering focuses on
-the problem of so-called ironies of automation, whereby increasing automation actually
+the problem of so-called ironies of automation, whereby increasing
+automation actually 
 increases the load on the operator, rather than decreasing it, and
 leads to increased failure rather than increased
-reliability.\cite{???-somethingin-hutchins} It might
+reliability \cite{parasuramanW}. It might
 not be clear at first glance how this would be, and it is in part an
 interface problem---with how information is presented to the operator,
 not with the concept of automation itself. But a distributed,
@@ -1081,13 +1084,14 @@ the complex internal dynamics of
 the joint system improves the analysis: looking at which tasks are
 allocated where, and what is the demand on human perceptual and
 decision-making systems, at any particular time. As one should expect,
-people drive largely based on experience and instinct,\cite{article-http://www.telegraph.co.uk/news/science/science-news/11410261/Driverless-car-beats-racing-driver-for-first-time.html} not logical
+people drive largely based on experience and
+instinct,\cite{knaptonDriverless} not logical 
 thought, and similarly system performance should be expected to shift
 over time as interactions with automation are internalized. As
 Hutchins and Klausen describe, ``It is possible to design computer systems with open
 interfaces (Hutchins, 1990) that support learning in joint action but
 this can only be done when the designer goes beyond the conception of
-the isolated individual user.''\cite[p. 13]{hutchinsKlausen}
+the isolated individual user'' \cite[p. 13]{hutchinsKlausen}.
 Appropriately recognizing interactions is critical to successful design.
 
 Not to belabor the point, however, the perspective I am describing is
@@ -1130,7 +1134,7 @@ that this kind of engineering work gains greater recognition with the
 entry of Google, Apple, Tesla, and other high-technology companies
 into the autonomous vehicle space, but so far Google seems to dream
 of minimizing the interface as much as possible, rather than more
-broadly considering what sort of interface makes sense.\cite{???}
+broadly considering what sort of interface makes sense \cite{markoffNext}.
 While the interface/UX-first approach of tech companies seems as if it
 would put interaction at the center, the focus on simplicity
 presupposes a certain kind of highly automated operation.
@@ -1149,7 +1153,7 @@ look at the entire aviation system and ask how
 it is that aircraft are kept separated from each other, we see that it
 is through the propagation of representational state of descriptions
 of flight paths into the state of the aircraft controls
-themselves.''\cite[p. 14]{hutchinsKlausen} This situation is not quite
+themselves'' \cite[p. 14]{hutchinsKlausen}. This situation is not quite
 the same for cars, which are generally not orchestrated at a
 system-level in the same fashion. But in principle, the roadway presents a related
 information processing situation. The propagation of a ``plan'' of the
@@ -1215,7 +1219,7 @@ increases in risk-taking behavior likely to accrue in safer systems.
 But Urmson goes further to say that the incremental approach will
 never achieve the necessary full automation: ``That’s like me saying
 if I work really hard at jumping, one day I will be able to fly''
-\cite{???-http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/}.
+\cite{friedGoogle}.
 But while layers of assistive technologies cannot be expected to simply become
 driverless without high level control and coordination, this perspective wrongly
 assumes that driverless vehicles, ``completely'' automated, are the
@@ -1234,7 +1238,7 @@ broader criticism. NASA, and the Defense Science Board in their report
 \emph{The Role of 
 Autonomy in DoD Systems}, describe the proliferation of attempts at
 automation taxonomies as developing out of Sheridan's work, the very
-book cited above as the bible for human supervisory control.\cite{???}
+book cited above as the bible for human supervisory control \cite[p. 23]{DSB}.
 However, the DSB takes a far more nuanced position than many do,
 perhaps due to many years worth of accumulated experience within the
 military in terms of how to understand and apply autonomy in practical
@@ -1243,7 +1247,8 @@ identifies that these levels formulations are ``often incorrectly
 interpreted as implying that autonomy is simply a delegation of a
 complete task to a computer, that a vehicle operates at a single level
 of autonomy and that these levels are discrete and represent scaffolds
-of increasing difficulty,''\cite{???} all interpretations made by both the
+of increasing difficulty,'' \cite[p. 23-24]{DSB} all interpretations
+made by both the 
 NHTSA and SAE taxonomies that may be expected to guide self-driving
 vehicle research and policy, and the very interpretations I have been
 attempting to critique. Instead, autonomy in practice generally
@@ -1264,9 +1269,9 @@ which, as we have seen in air and space flight, is a matter of perspective.
 
 In addition, the DSB highlights two main negative consequences of the popularity of
 levels of autonomy: that it ``deflects focus from the fact that all
-autonomous systems are joint human-machine cognitive systems''\cite{???} and
+autonomous systems are joint human-machine cognitive systems'' and
 that it ``reinforces fears about unbounded autonomy'' while obscuring
-the fact that no systems are fully autonomous\cite{???}. Humans are always
+the fact that no systems are fully autonomous \cite[p. 24]{DSB}. Humans are always
 involved somewhere along the line, in their programming, production,
 and use, though it makes sense that the military, focused as it is on
 human command hierarchies, would find it especially important to make
@@ -1281,7 +1286,7 @@ rather than discount it as a stopgap measure. New tools and interfaces
 may be necessary to facilitate this process, to allow for the human to
 take on new roles in the human-machine relationship: currently, engineers
 co-piloting Google's driverless vehicles sit with laptops to monitor
-the vehicle telemetry\cite{???-article-from-DM-class}. Data displays
+the vehicle telemetry \cite{bilgerAuto}. Data displays
 like this, or like the pretty LIDAR visualizations that get used to
 explain and dramatize sensor data, could be needed to form the core of the
 instrumentation for the automated vehicle. More discussion should be
@@ -1329,18 +1334,19 @@ distracted on the order of 10 seconds without causing a crash. These
 are, at their core, very different engineering situations. And though
 people do panic in crisis situations such as the TransAsia Airways
 Flight 235 crash in which panicked pilots throttled back the wrong
-engine \cite{???-http://m.nautil.us/issue/23/dominoes/fear-in-the-cockpit}, it may be more appropriate and more useful to consider systems
+engine \cite{wiseFear},
+it may be more appropriate and more useful to consider systems 
 that scaffold and support human capacity and attention, rather than
 attempting to eliminate it altogether. In
 all this, we should avoid the clich\'{e}d question ``People: sinners
 or saints?'' which seems so popular in media discussions: it represents
 a ``false position'' that does not adequately reflect the complex
 nature of operating automated
-systems\cite[p. ??]{???-woodshollnagel-JCS-ch1}. As operators, we are
+systems \cite[p. 1]{woodshollnagel}. As operators, we are
 sources of both success and failure. But ultimately, as Woods and
 Hollnagel point out, all cognitive systems are finite and will
 therefore also have errors, lapses, and
-failures\cite[p. ??]{???-woodshollnagel}. Success in automation is not
+failures\cite[p. 1--2]{woodshollnagel}. Success in automation is not
 a given that the human presence degrades,\footnote{And it is not fair
   to say that increasing automation necessarily decreases the
   importance of the human. The NRC (National
@@ -1357,14 +1363,14 @@ becomes more rather than less important when moving toward the
 autonomous end of the spectrum
 because it is so important to assure that the systems are
 properly designed, tested, deployed, and monitored to ensure the
-aircraft's continued airworthiness''\cite[p. 14-15]{???-NRCaviation}}
+aircraft's continued airworthiness'' \cite[p. 14-15]{NRCAutonomy}}
 but something to be  
 achieved through careful engineering of automated components and their
 human interactions. The PARC/CAST Flight Deck Automation Working Group
 found that human pilots are actively involved in mitigating risk from
 other system components, and states that ``an exclusive focus on pilot
 errors will not take into account the positive actions and decisions
-that pilots do on a frequent basis''\cite[p. 30]{???-PARC/CAST}. 
+that pilots do on a frequent basis''\cite[p. 30]{PARCCAST}. 
 
 We should return here to the myth of the ``personless'' factory or the
 self-teaching computer program: the ``autonomous'' vehicle is a
@@ -1439,7 +1445,7 @@ clear distinction between current and future automation systems:  in
 the NHTSA's policy document, current automation systems like ABS,
 traction control, and stability control can override the human, but
 ``driverless'' systems must have overrides that can be used at any
-time\cite[p. ??]{NHTSA}. This distinction is artificial. However,
+time \cite[p. ??]{NHTSA}. This distinction is artificial. However,
 consistent human involvement in vehicle operations seems to open new
 doors for human acceptance, by putting these systems closer to what we
 already know. What we should do is consider carefully why we feel that
@@ -1447,7 +1453,8 @@ ABS and traction control can be allowed to override human inputs, and
 what separates them from systems that should not be allowed to do so, and
 keep this in mind as we continue to develop more complex automation systems.
 
-Additionally, supervisory control presents the possibility for a renegotiation of car
+Additionally, supervisory control presents the possibility for a
+renegotiation of car 
 culture and its troubled relationship with the automated vehicle. In
 my interviews and research work at conferences, I noted especially the
 contradictions within common characterizations of human
@@ -1464,11 +1471,19 @@ the roads with automated vehicles, in response to concerns about being
 forced to use automated vehicles. She is most likely correct, but this
 does little to allay fears in the face of the statistic that prompted
 the question: that 90 percent of accidents are caused by human
-error.\footnote{FIND ESTIMATES OF THIS AND COMMENT ON ACCURACY} While
+error.\footnote{This statistic seems warranted given recent NHTSA crash
+  data \cite{NHTSAcrash}. Around 93 percent of crashes with ``critical
+  reasons'' involve driver error as a critical reason for the crash.
+  But 30 percent involve a roadway factor, and 12 percent involve some
+vehicle-related reason. There may be many reasons for a crash, and
+estimating when the human is solely or primarily responsible for a
+crash is not trivial.} While
 human driving isn't going away in the near future, the idea that
 autonomous vehicles will free up the roads for people who want to
 drive manually seems more like a platitude than a thought-through
 design strategy. 
+
+%% TODO2 \footnote{FIND ESTIMATES OF rate AND COMMENT ON ACCURACY}
 
 These questions of use and licensing are deeply embedded in the idea
 of progress. ``Does the potential for greater safety imply we should be
