--- a/main.bib
+++ b/main.bib
@@ -99,6 +99,18 @@
    pages = "265--288",
 }
 
+@INCOLLECTION{hutchinsKlausen,
+   author = "Edwin Hutchins and Tove Klausen",
+   title = "{D}istributed {C}ognition in an {A}irline {C}ockpit",
+   booktitle = "{C}ognition and {C}ommunication at {W}ork",
+   editor = "Y. Engstrom and D. Middleton",
+   publisher = "Cambridge Universty Press",
+   address = "Cambridge, UK",
+   year = 1996,
+   pages = "15--34",
+   note = "Text available at http://hci.ucsd.edu/media/uploads/hci_papers/EH1996-1.pdf",
+}
+
 @UNPUBLISHED{roesmithYankee,
    author = "Merritt Roe Smith",
    title = "{Y}ankee {A}rmorers and the {U}nion {W}ar {M}achine",
@@ -1510,6 +1522,72 @@
    title = "Self-Driving Vehicle Operator / Operations Associate",
    note = "HireArt Job Posting: https://www.hireart.com/jobs/6ba4ebe8/apply?",
 }
+
+@ARTICLE{knaptonDriverless,
+   author = "Sarah Knapton",
+   title = "Driverless car beats racing driver for first time",
+   journal = "Telegraph",
+   month = "February 13",
+   year = "2015",
+   note = "http://www.telegraph.co.uk/news/science/science-news/11410261/Driverless-car-beats-racing-driver-for-first-time.html",
+}
+
+@ARTICLE{markoffNext,
+   author = "John Markoff",
+   title = "Google's Next Phase in Driverless Cars: NO Steering Wheel or Brake Pedals",
+   journal = "The New York Times",
+   month = "May 27",
+   year = "2014",
+   note = "http://www.nytimes.com/2014/05/28/technology/googles-next-phase-in-driverless-cars-no-brakes-or-steering-wheel.html?_r=0",
+}
+
+@ARTICLE{friedGoogle,
+   author = "Ina Fried",
+   title = "Google Self-Driving Car Chief Wants Tech on the Market Within Five Years",
+   journal = "re/code",
+   month = "March 17",
+   year = "2015",
+   note = "http://recode.net/2015/03/17/google-self-driving-car-chief-wants-tech-on-the-market-within-five-years/",
+}
+
+@ARTICLE{burkhardBilger,
+   author = "Burkhard Bilger",
+   title = "Auto Correct: Has the self-driving car at last arrived?",
+   journal = "The New Yorker",
+   month = "November 25",
+   year = "2013",
+   note = "http://www.newyorker.com/magazine/2013/11/25/auto-correct",
+}
+
+@ARTICLE{wiseFear,
+   author = "Jeff Wise",
+   title = "Fear in the Cockpit: The tragic plane crash in Taipei was the result of mechanical and psychological failures",
+   journal = "Nautilus",
+   month = "April 9",
+   year = "2015",
+   number = 23,
+   note = "http://m.nautil.us/issue/23/dominoes/fear-in-the-cockpit",
+}
+
+@BOOK{woodshollnagel,
+   author = "David D. Woods and Erik Hollnagel",
+   title = "Joint Cognitive Systems: Patters in Cognitive Systems Engineering",
+   publisher = "CRC Press, Taylor \& Francis",
+   address = "Boca Raton, FL",
+   year = "2006",
+}
+
+@TECHREPORT{NHTSAcrash,
+   key = "{National Highway Traffic Safety Administration}",
+   author = "",
+   title = "{N}ational {M}otor {V}ehicle {C}rash {C}ausation {S}urvey: {R}eport to {C}ongress",
+   institution = "National Highway Traffic Safety Administration",
+   number = "DOT HS 811 059",
+   month = "July",
+   year = 2008,
+}
+
+
 
 
 
